# municipal-ml-system

muncipal_backend/: .dockerignore  .env  Dockerfile  docker-compose.yml  pyproject.toml  requirement.txt  requirements.txt
muncipal_backend/app/: create_db.py  crud.py  database.py  main.py  schemas.py
muncipal_backend/app/ml/: category_model.pkl  encoder.py  predictor.py  priority_model.pkl
muncipal_backend/app/router/: complaints.py
